# transcoder

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
submodule/: CMakeLists.txt
transcoder/: CMakeLists.txt
transcoder/include/dto/: DtoRequestInterface.hpp  DtoResponseInterface.hpp  DtoResponseJsonType.hpp  DtoWSConnectMessage.hpp  DtoWSErrorResponse.hpp  DtoWSFileListResponse.hpp  DtoWSFileListReuqest.hpp  DtoWSTranscodeProgress.hpp  DtoWSTranscodeRequest.hpp  DtoWSTranscodeResponse.hpp
transcoder/include/error/: Result.hpp
transcoder/include/http/: HTTPFileHandler.hpp  HTTPSessionFilter.hpp  HTTPSessionManager.hpp  HTTPUploadHandler.hpp  HTTPWebSocketHandler.hpp
transcoder/include/http/ws_recv_handler/: WSClient.hpp  WSFileListTask.hpp  WSRequestFilter.hpp  WSRequestFilterInterface.hpp  WSRequestManager.hpp  WSRequestTask.hpp  WSRequestTaskInterface.hpp  WSSessionFilter.hpp  WSTranscodeTask.hpp
transcoder/include/server/: Config.hpp  Transcoder.hpp
transcoder/include/thread/: TranscodeThread.hpp
transcoder/include/transcoder/: TRANSCODE_DEFINE.hpp  Transcoder.hpp
transcoder/include/utils/: ArgParser.hpp  Config.hpp  ThreadSafeQueue.hpp  TranscodeThreadPool.hpp
transcoder/src/: CMakeLists.txt
transcoder/src/dto/: CMakeLists.txt  DtoResponseJsonType.cpp  DtoWSConnectMessage.cpp  DtoWSErrorResponse.cpp  DtoWSFileListRequest.cpp  DtoWSFileListResponse.cpp  DtoWSTranscodeProgress.cpp  DtoWSTranscodeRequest.cpp  DtoWSTranscodeResponse.cpp
transcoder/src/http/: CMakeLists.txt  HTTPFileHandler.cpp  HTTPSessionFilter.cpp  HTTPSessionManager.cpp  HTTPUploadHandler.cpp  HTTPWebSocketHandler.cpp
transcoder/src/http/ws_recv_handler/: WSClient.cpp  WSFileListTask.cpp  WSRequestFilter.cpp  WSRequestManager.cpp  WSRequestTask.cpp  WSSessionFilter.cpp  WSTranscodeTask.cpp
transcoder/src/server/: CMakeLists.txt  Config.cpp  Transcoder.cpp
transcoder/src/thread/: CMakeLists.txt  TranscodeThread.cpp
transcoder/src/transcoder/: Transcoder.cpp
transcoder/src/utils/: ArgParser.cpp  CMakeLists.txt  Config.cpp
transcoder/test/: CMakeLists.txt  http.cpp  http_test.hpp  main.cpp  server.cpp  utils.cpp
